--- a/app/src/main/res/layout/screen_yes.xml
+++ b/app/src/main/res/layout/screen_yes.xml
@@ -12,20 +12,20 @@
         />
 
     <Button
-        android:id="@+id/refresh_yes_gif_btn"
+        android:id="@+id/btn_refresh_yes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/gif_yes"
-        android:text="refresh yes gif"
+        android:text="@string/refresh_yes_gif"
         />
 
     <Button
-        android:id="@+id/show_no_gif"
+        android:id="@+id/btn_show_no"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/gif_yes"
-        android:layout_toRightOf="@+id/refresh_yes_gif_btn"
-        android:text="show no gif"
+        android:layout_toRightOf="@+id/btn_refresh_yes"
+        android:text="@string/show_no_gif"
         />
 
 </RelativeLayout>
