--- a/app/src/main/res/layout/screen_no.xml
+++ b/app/src/main/res/layout/screen_no.xml
@@ -2,30 +2,27 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/gif_no"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/btn_refresh_no"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/gif_no"
-        android:text="@string/refresh_no_gif"
-        />
+        android:text="@string/refresh_no_gif" />
 
     <Button
         android:id="@+id/btn_show_yes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/gif_no"
+        android:layout_toEndOf="@+id/btn_refresh_no"
         android:layout_toRightOf="@+id/btn_refresh_no"
-        android:text="@string/show_yes_gif"
-        />
+        android:text="@string/show_yes_gif" />
 
 </RelativeLayout>
